tests/reference/asr-expr8-6beda60.stderr
semantic error: Variable 'x' not declared
  --> tests/expr8.py:14:5
   |
14 |     x = True + True
   |     ^ 
